[Autofill] Add some missing types in autofill_metrics.cc

BUG=653887
TEST=AutofillMetrics

Review-Url: https://codereview.chromium.org/2471263002
Cr-Commit-Position: refs/heads/master@{#429550}

Former-commit-id: 04e3a2ed54c326926be9cc0da552cac84f7469d3